--- a/posts/templates/posts/includes/navbar.html
+++ b/posts/templates/posts/includes/navbar.html
@@ -2,6 +2,7 @@
     <div class="nav-wrapper">
         <a href="/" class="brand-logo">Medium</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <a class="btn-floating btn-large waves-effect waves-light red" href="{% url 'post_new' %}"><i class="material-icons">add</i></a>
         <li><a href="/">Home</a></li>
         {% if user.is_authenticated %}
             <li><a href="/account">{{user.username}}</a></li>
