--- a/posts/templates/posts/layout.html
+++ b/posts/templates/posts/layout.html
@@ -9,6 +9,7 @@
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Blog</title>
 </head>
 <body>
