--- a/posts/templates/posts/details.html
+++ b/posts/templates/posts/details.html
@@ -4,7 +4,7 @@
     <h3 class="center-align red lighten-3">{{post.title}}</h3>
     <div class="card">
         <div class="card-content">
-            {{post.body}}
+            {{post.body | safe }}
         </div>
         <div class="card-action">
             {{post.created_at}}
