--- a/posts/templates/posts/details.html
+++ b/posts/templates/posts/details.html
@@ -8,7 +8,7 @@
         </div>
         <div class="card-action">
             {{post.created_at}}
-            {{post.auther}}
+            {{post.author}}
         </div>
     </div>
     <a href="/posts" class="btn">Go Back</a>
