--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -2,6 +2,8 @@
 
 {% block content %}
     <h3 class="center-align red lighten-3">{{title}}</h3>
+    <a class="waves-effect waves-light btn red" href="{% url 'post_new' %}"><i class="material-icons left">add</i>Article</a>
+    <!-- <a class="btn-floating btn-large waves-effect waves-light red" href="{% url 'post_new' %}"><i class="material-icons">add</i></a> -->
     <ul class="collection">
         {% for post in posts %}
             <li class="collection-item">
