--- a/posts/templates/posts/includes/navbar.html
+++ b/posts/templates/posts/includes/navbar.html
@@ -1,11 +1,24 @@
+<!-- Dropdown Structure -->
+<ul id="dropdown1" class="dropdown-content">
+    <li><a href="/accounts/profile">Profile</a></li>
+    <li><a href="/accounts/settings">Settings</a></li>
+    <li><a href="/accounts/password_change">Change Password</a></li>
+    <!-- <li><a href="/accounts/pasword_reset">Change Password</a></li> -->
+    <li><a href="/accounts/logout">Logout</a></li>
+    <!-- <li class="divider"></li> -->
+    <!-- <li><a href="#!">three</a></li> -->
+</ul>
+<!-- Navbar -->
 <nav class="brown">
     <div class="nav-wrapper container">
         <a href="/" class="brand-logo">Medium</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="/">Home</a></li>
         {% if user.is_authenticated %}
-            <li><a href="/account">{{user.username}}</a></li>
-            <li><a href="/accounts/logout">Logout</a></li>
+            <!-- Dropdown Trigger -->
+            <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">{{user.username}}<i class="material-icons right">arrow_drop_down</i></a></li>
+            <!-- <li><a href="/account">{{user.username}}</a></li> -->
+            <!-- <li><a href="/accounts/logout">Logout</a></li> -->
         {% else %}
             <li><a href="/register">Register</a></li>
             <li><a href="/accounts/login/">Login</a></li>
