--- a/posts/templates/posts/layout.html
+++ b/posts/templates/posts/layout.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Blog</title>
 </head>
@@ -18,11 +16,15 @@
         <h1>Blog</h1>
     </header> -->
     <div class="container">
+        <br>
         {% block content %}
             
         {% endblock %}
         <br>
         <a href="/admin" style="display:block">Admin Login</a>
     </div>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>M.AutoInit();</script>
 </body>
 </html>
