--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -1,13 +1,23 @@
 {% extends "posts/layout.html" %}
 
 {% block content %}
-    <a class="waves-effect waves-light btn red" href="{% url 'post_new' %}"><i class="material-icons left">add</i>Article</a>
+    <a class="waves-effect waves-light btn red" href="{% url 'post_new' %}"><i class="material-icons left">add</i>Write new article</a>
     <!-- <a class="btn-floating btn-large waves-effect waves-light red" href="{% url 'post_new' %}"><i class="material-icons">add</i></a> -->
-    <ul class="collection">
+
         {% for post in posts %}
-            <li class="collection-item">
-                <a href="/posts/details/{{post.id}}">{{post.title}}</a>
-            </li>
+        <a href="/posts/details/{{post.id}}">
+            <div class="card blue lighten-5">
+                    <div class="card-content black-text">
+                        <span class="card-title">{{ post.title }}</span>
+                        <span class="green-text text-darken-2">by {{ post.user }} at {{ post.created_at|date }}</span>
+                        <p>{{ post.body | truncatechars:100 | safe }}</p>
+                    </div>
+                    <!-- <div class="card-action">
+                        <a href="/posts/details/{{post.id}}">Read more</a>
+                    </div> -->
+                </div>  
+        </a>
+            
         {% endfor %}
-    </ul>
+
 {% endblock %}
