--- a/posts/templates/posts/profile.html
+++ b/posts/templates/posts/profile.html
@@ -1,22 +1,31 @@
 {% extends 'posts/layout.html' %}
 {% block content %}
-<!-- <h3>{{ user.username }}</h3>
-<p>{{ user.email }}</p>
-<img src="{{ user.profile.image.url }}" alt="hello"> -->
-<div class="row">
-    <div class="col s12 m7">
-      <div class="card horizontal">
-        <div class="card-image">
-          <img src="{{ user.profile.image.url }}">
-          <span class="card-title blue">{{ user.username }}</span>
+<div class="col s12 m8 offset-m2 l6 offset-l3">
+  <div class="card-panel grey lighten-5 z-depth-1">
+    <div class="row valign-wrapper">
+      <div class="col s2">
+        <img src="{{ user.profile.image.url }}" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
+      </div>
+      <div class="col s10">
+        <h3>{{ user.username }}</h3>
+        <span class="black-text">
+          {{ user.profile.bio }}
+        </span>
+      </div>
+    </div>
+    <div class="col s12 m6">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">Card Title</span>
+          <p>I am a very simple card. I am good at containing small bits of information.
+          I am convenient because I require little markup to use effectively.</p>
         </div>
-        <div class="card-content">
-          <p>{{ user.profile.bio }}</p>
-        </div>
-        <!-- <div class="card-action">
+        <div class="card-action">
           <a href="#">This is a link</a>
-        </div> -->
+          <a href="#">This is a link</a>
+        </div>
       </div>
     </div>
   </div>
+</div>
 {% endblock %}
