Minor UI and view updates

--- a/posts/templates/posts/includes/navbar.html
+++ b/posts/templates/posts/includes/navbar.html
@@ -9,7 +9,7 @@
     <!-- <li><a href="#!">three</a></li> -->
 </ul>
 <!-- Navbar -->
-<nav class="brown">
+<nav class="purple lighten-2">
     <div class="nav-wrapper container">
         <a href="/" class="brand-logo">Medium</a>
         <!-- Adds mobile support -->
@@ -21,7 +21,7 @@
             <li>
                 <a class="dropdown-trigger" href="#!" data-target="dropdown1">
                     <!-- <a class="waves-effect waves-block waves-light profile-button" href="javascript:void(0);" data-target="profile-dropdown"><span class="avatar-status avatar-online"><img src="../../../app-assets/images/avatar/avatar-7.png" alt="avatar"><i></i></span></a> -->
-                    <!-- TODO - fixing the size -->
+                    <!-- TODO - fixing the username -->
                     <!-- <span class="left">{{user.username}}</span> -->
                     <i class="valign-wrapper">
                         <img src="{{ user.profile.image.url }}" alt="logo" style="height: 38px;" class="responsive-img circle valign-wrapper">
