--- a/posts/templates/posts/includes/navbar.html
+++ b/posts/templates/posts/includes/navbar.html
@@ -15,8 +15,11 @@
         <!-- Adds mobile support -->
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="/">Home</a></li>
+        <!-- <li><a href="/">Home</a></li> -->
         {% if user.is_authenticated %}
+            <li>
+                <a class="waves-effect waves-light btn orange lighten-1" href="{% url 'post_new' %}"><i class="material-icons left">add</i>Write new article</a>
+            </li>
             <!-- Dropdown Trigger -->
             <li>
                 <a class="dropdown-trigger" href="#!" data-target="dropdown1">
