feat: Made User profiles public Minor UI updates and bug fixes

--- a/posts/templates/posts/includes/navbar.html
+++ b/posts/templates/posts/includes/navbar.html
@@ -1,8 +1,8 @@
 <!-- Dropdown Structure -->
 <ul id="dropdown1" class="dropdown-content">
-    <li><a href="/accounts/profile">Profile</a></li>
+    <li><a href="/accounts/profile/{{user.username}}">Profile</a></li>
     <li><a href="/accounts/settings">Settings</a></li>
-    <li><a href="/accounts/password_change">Change Password</a></li>
+    <!-- <li><a href="/accounts/password_change">Change Password</a></li> -->
     <!-- <li><a href="/accounts/pasword_reset">Change Password</a></li> -->
     <li><a href="/accounts/logout">Logout</a></li>
     <!-- <li class="divider"></li> -->
