--- a/posts/templates/posts/profile.html
+++ b/posts/templates/posts/profile.html
@@ -4,12 +4,12 @@
   <div class="card-panel grey lighten-5 z-depth-1">
     <div class="row valign-wrapper">
       <div class="col s2">
-        <img src="{{ user.profile.image.url }}" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
+        <img src="{{ owner.profile.image.url }}" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
       </div>
       <div class="col s10">
-        <h3>{{ user.username }}</h3>
+        <h3>{{ owner.username }}</h3>
         <span class="black-text">
-          {{ user.profile.bio }}
+          {{ owner.profile.bio }}
         </span>
       </div>
     </div>
