--- a/posts/templates/posts/layout.html
+++ b/posts/templates/posts/layout.html
@@ -21,7 +21,7 @@
             
         {% endblock %}
         <br>
-        <a href="/admin" style="display:block">Admin Login</a>
+        <!-- <a href="/admin" style="display:block">Admin Login</a> -->
     </div>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
