--- a/posts/templates/posts/includes/navbar.html
+++ b/posts/templates/posts/includes/navbar.html
@@ -18,7 +18,7 @@
         <!-- <li><a href="/">Home</a></li> -->
         {% if user.is_authenticated %}
             <li>
-                <a class="waves-effect waves-light btn orange lighten-1" href="{% url 'post_new' %}"><i class="material-icons left">add</i>Write new article</a>
+                <a class="waves-effect waves-light btn blue lighten-1" href="{% url 'post_new' %}"><i class="material-icons left">add</i>New article</a>
             </li>
             <!-- Dropdown Trigger -->
             <li>
